force-app/websites/me/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <description
  >Featured and other projects rendered in the "Things I've Built" sections.</description>
    <label>Project</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>