force-app/websites/me/objects/Project__c/fields/External_URL__c.field-meta.xml
<CustomField>
    <fullName>External_URL__c</fullName>
    <description>Live site / external link for the project.</description>
    <label>External URL</label>
    <type>Url</type>
</CustomField>