force-app/websites/me/objects/Project__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <description
  >Project thumbnail image URL (File/CDN link). Used by featured cards.</description>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>