force-app/websites/me/objects/Project__c/fields/Is_Published__c.field-meta.xml
<CustomField>
    <fullName>Is_Published__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only published projects are returned to the site.</description>
    <label>Is Published</label>
    <type>Checkbox</type>
</CustomField>