force-app/websites/me/objects/Project__c/fields/Show_In_Archive__c.field-meta.xml
<CustomField>
    <fullName>Show_In_Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Other projects revealed behind the "Show More" / archive.</description>
    <label>Show In Archive</label>
    <type>Checkbox</type>
</CustomField>