force-app/websites/me/objects/Project__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Ascending display order within a project type.</description>
    <label>Sort Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>